[gd_scene load_steps=4 format=2]

[ext_resource path="res://spikes/spike.tscn" type="PackedScene" id=1]
[ext_resource path="res://spikes/ceiling/ceiling.gd" type="Script" id=2]
[ext_resource path="res://spikes/ceiling/fall.wav" type="AudioStream" id=3]

[node name="Ceiling" type="Node2D"]
script = ExtResource( 2 )
spike_scene = ExtResource( 1 )
drop_distance = 4.0

[node name="Spikes" type="Node2D" parent="."]

[node name="Spike" parent="Spikes" instance=ExtResource( 1 )]

[node name="Spike2" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 16, 0 )

[node name="Spike3" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 32, 0 )

[node name="Spike4" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 48, 0 )

[node name="Spike5" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 64, 0 )

[node name="Spike6" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 80, 0 )

[node name="Spike7" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 96, 0 )

[node name="Spike8" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 112, 0 )

[node name="Spike9" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 128, 0 )

[node name="Spike10" parent="Spikes" instance=ExtResource( 1 )]
position = Vector2( 144, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="FallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
